[project]
name = "storm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "youtube-search-python>=1.6.6",
    "youtube-search>=2.1.2",
    "youtube-transcript-api>=0.6.3",
    "yt-dlp>=2025.1.12",
]
